[package]
name = "rust-consul"
version = "0.0.1"

license = "BSD-2-Clause"
authors = ["baloo@gandi.net"]
description = "A tokio based rust client for consul."

[dependencies]
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
native-tls = "0.1"
log = "0.3"
tokio-core = "0.1"
url = "1.5"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
