[package]
name = "rust-consul"
version = "0.1.1"

license = "BSD-2-Clause"
authors = ["baloo@gandi.net"]
description = "A tokio based rust client for consul."

[dependencies]
futures = "0.1"
hyper = "0.12"
hyper-tls = "0.3"
native-tls = "0.2"
log = "0.4"
tokio-core = "0.1"
url = "1.7"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
